--- a/debian/control
+++ b/debian/control
@@ -3,7 +3,9 @@ Maintainer: Debian Science Maintainers <debian-science-maintainers@lists.alioth.
 Uploaders: Ruben Undheim <ruben.undheim@gmail.com>
 Section: electronics
 Priority: optional
-Build-Depends: debhelper (>= 9)
+Build-Depends: debhelper (>= 9),
+               bison,
+               flex
 Standards-Version: 4.1.5
 Vcs-Browser: https://salsa.debian.org/science-team/netan
 Vcs-Git: https://salsa.debian.org/science-team/netan.git
