--- a/debian/control
+++ b/debian/control
@@ -5,7 +5,9 @@ Section: electronics
 Priority: optional
 Build-Depends: debhelper (>= 9),
                bison,
-               flex
+               flex,
+               tcl8.6-dev,
+               libreadline-dev
 Standards-Version: 4.1.5
 Vcs-Browser: https://salsa.debian.org/science-team/netan
 Vcs-Git: https://salsa.debian.org/science-team/netan.git
