--- a/debian/control
+++ b/debian/control
@@ -6,7 +6,8 @@ Priority: optional
 Build-Depends: debhelper (>= 9),
                bison,
                flex,
-               tcl8.6-dev,
+               tcl-dev,
+               libtcl8.6,
                libreadline-dev
 Standards-Version: 4.1.5
 Vcs-Browser: https://salsa.debian.org/science-team/netan
