--- a/debian/control
+++ b/debian/control
@@ -1,4 +1,4 @@
-Source: netan
+Source: netlist-analyzer
 Maintainer: Debian Science Maintainers <debian-science-maintainers@lists.alioth.debian.org>
 Uploaders: Ruben Undheim <ruben.undheim@gmail.com>
 Section: electronics
@@ -10,12 +10,12 @@ Build-Depends: debhelper (>= 9),
                libtcl8.6,
                libreadline-dev
 Standards-Version: 4.1.5
-Vcs-Browser: https://salsa.debian.org/science-team/netan
-Vcs-Git: https://salsa.debian.org/science-team/netan.git
+Vcs-Browser: https://salsa.debian.org/science-team/netlist-analyzer
+Vcs-Git: https://salsa.debian.org/science-team/netlist-analyzer.git
 Homepage: https://github.com/rubund/netan
 
 
-Package: netan
+Package: netlist-analyzer
 Architecture: any
 Depends: ${shlibs:Depends},
          ${misc:Depends}
