--- a/input/liberty/Makefile
+++ b/input/liberty/Makefile
@@ -1,4 +1,4 @@
-CPPFLAGS := -g
+CXXFLAGS ?= -g
 
 liberty.a: liberty_parser.tab.o lex.liberty_parser_yy.o lutable.o liberty.o liberty_cell.o liberty_pin.o lutable_numbers.o
 	ar rvs liberty.a liberty_parser.tab.o lex.liberty_parser_yy.o lutable.o liberty.o liberty_cell.o liberty_pin.o lutable_numbers.o
@@ -11,10 +11,10 @@ lex.liberty_parser_yy.c: liberty_parser.l liberty_parser.tab.h
 
 
 liberty_parser.tab.o: liberty_parser.tab.c liberty_parser.tab.h 
-	g++ $(CPPFLAGS) -c liberty_parser.tab.c
+	g++ $(CPPFLAGS) $(CXXFLAGS) -c liberty_parser.tab.c
 
 lex.liberty_parser_yy.o: lex.liberty_parser_yy.c
-	g++ $(CPPFLAGS) -c lex.liberty_parser_yy.c
+	g++ $(CPPFLAGS) $(CXXFLAGS) -c lex.liberty_parser_yy.c
 
 
 clean:
