--- a/tclembed/Makefile
+++ b/tclembed/Makefile
@@ -1,4 +1,4 @@
-CPPFLAGS := -g
+CXXFLAGS ?= -g
 
 default: tclembed.a
 
@@ -6,7 +6,7 @@ tclembed.a: interpreter.o
 	ar rvs tclembed.a interpreter.o
 
 interpreter.o: interpreter.cc
-	g++ $(CPPFLAGS) -c interpreter.cc -I/usr/include/tcl8.6
+	g++ $(CPPFLAGS) $(CXXFLAGS) -c interpreter.cc -I/usr/include/tcl8.6
 
 clean:
 	$(RM) -rf *.o *.a
