--- a/tests/Makefile
+++ b/tests/Makefile
@@ -1,6 +1,4 @@
-CPPFLAGS := -g
-
-LDFLAGS := $(LDFLAGS)
+CXXFLAGS ?= -g
 
 DEPENDENCIES := program_state.o ../input/liberty/liberty.a ../input/verilog/verilog.a ../constraints/constraints.a ../timing/timing.a
 
@@ -16,13 +14,13 @@ default: test1
 
 
 program_state.o: ../program_state.cc
-	g++ $(CPPFLAGS) -c -o program_state.o ../program_state.cc
+	g++ $(CPPFLAGS) $(CXXFLAGS) -c -o program_state.o ../program_state.cc
 
 test1: test1.o ../dependencies program_state.o
-	g++ $(CPPFLAGS) -o test1 test1.o $(DEPENDENCIES)
+	g++ $(CPPFLAGS) $(CXXFLAGS) -o test1 test1.o $(DEPENDENCIES)
 
 test1.o: test1.cc
-	g++ $(CPPFLAGS) -c test1.cc
+	g++ $(CPPFLAGS) $(CXXFLAGS) -c test1.cc
 #netlist_analyzer: $(OBJECTS) input/liberty/liberty.a tclembed/tclembed.a input/verilog/verilog.a constraints/constraints.a timing/timing.a
 #	g++ -ggdb -o netlist_analyzer $(OBJECTS) input/verilog/verilog.a input/liberty/liberty.a tclembed/tclembed.a constraints/constraints.a timing/timing.a -ltcl -lreadline
 
