--- a/debian/rules
+++ b/debian/rules
@@ -10,5 +10,5 @@ export DEB_BUILD_MAINT_OPTIONS = hardening=+all
 %:
 	dh $@
 
-override_dh_auto_build:
-	make PREFIX=/usr
+override_dh_auto_install:
+	dh_auto_install -- PREFIX=/usr
